--- a/dotfiles/waybar/style.css
+++ b/dotfiles/waybar/style.css
@@ -1,6 +1,6 @@
 * {
 	font-size: 24px;
-	font-family: Source Code Pro;
+	font-family: "FiraCode Nerd Font Mono";
 }
 
 window#waybar {
@@ -29,6 +29,12 @@ window#waybar {
 #disk,
 #tray {
 	background: #1a1a1a;
+}
+
+#clock.1,
+#clock.2,
+#clock.3 {
+  font-size: 20px;
 }
 
 #workspaces button {
