--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-	font-size: 24px;
+	font-size: 20px;
 	font-family: "FiraCode Nerd Font Mono";
 }
 
@@ -24,17 +24,12 @@ window#waybar {
 #clock.3,
 #pulseaudio,
 #memory,
+#network,
 #cpu,
 #battery,
 #disk,
 #tray {
 	background: #1a1a1a;
-}
-
-#clock.1,
-#clock.2,
-#clock.3 {
-  font-size: 20px;
 }
 
 #workspaces button {
@@ -73,6 +68,7 @@ window#waybar {
 #clock,
 #pulseaudio,
 #memory,
+#network,
 #cpu,
 #battery,
 #disk {
