--- a/modules/bars/eww/config/eww.scss
+++ b/modules/bars/eww/config/eww.scss
@@ -26,6 +26,13 @@ progressbar>trough>progress {
   background-color: #333333;
 }
 
+.overlay {
+  font-size: 16px;
+  padding: 8px;
+  min-width: 1600px;
+  min-height: 900px;
+}
+
 .overview {
   font-size: 14px;
   padding: 8px;
